--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/uuid": "^7.0.0",
     "@vue/composition-api": "^0.4.0",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.6.2",
+    "uuid": "^7.0.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
