--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/uuid": "^7.0.0",
     "@vue/composition-api": "^0.4.0",
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "uuid": "^7.0.1",
     "vue": "^2.6.11",
